--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "connectionString": "mongodb://localhost:27017/bigbio",
-    "apiUrl":  "http://localhost:3000/api",
-    "secret": "REPLACE THIS WITH YOUR OWN SECRET, IT CAN BE ANY STRING"
+    "connectionString": "mongodb://localhost:27017/db",
+    "apiUrl":  "http://localhost:8080/api",
+    "secret": "NTSTBL"
 }
