--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "mongodb": "^2.2.10",
     "mongoskin": "^2.1.0",
     "q": "^1.4.1",
-    "rootpath": "^0.1.2"
+    "rootpath": "^0.1.2",
+    "jsonwebtoken": "~7.1.9"
   },
   "devDependencies": {},
   "scripts": {
