--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
   "name": "bigbiodatarecapture-ui",
   "version": "1.0.0",
-  "description": "UI for Big Bio-Date Recapture",
+  "description": "UI for Big Bio-Data Recapture",
   "main": "server.js",
   "dependencies": {
+    "angular": "^1.5.8",
+    "angular-animate": "^1.5.8",
+    "angular-aria": "^1.5.8",
+    "angular-material": "^1.1.1",
+    "angular-messages": "^1.5.8",
     "bcryptjs": "^2.3.0",
     "body-parser": "^1.15.2",
     "ejs": "^2.5.2",
